CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- The lpadmin command now allows printer access control
	  by group name as well as user name.
	- "lpoptions -l" got in an infinite loop if no default
	  printer was available.
	- The scheduler now logs the job-originating-host-name
	  attribute in the page_log file, and uses "-" for any
	  empty fields (patch from Dominik Kubla).
	- The pdftops filter now scales PDF pages within the
	  printable area of the page.
	- The pstops filter didn't include the page-label and
	  classification boxes when printing EPS or non-
	  conformant PS files.
	- The imagetops filter didn't always correctly position
	  the image on the page when printing in landscape
	  orientation.
	- The ppdEmit() functions now support the
	  RequiresPageRegion attribute when sending InputSlot
	  and ManualFeed commands.
	- The PPD loading code now supports standard options
	  outside of OpenUI/CloseUI as required by the PPD spec.
	- The cupstestppd program has been upgraded to provide a
	  concise PASS/FAIL report, additional detailed
	  conformance testing, and support for gzip'd PPD files.
	- The PPD loading code is now much more strict when
	  loading a PPD file, and tracks more format errors.
	- The scheduler ignored child signals when gathering the
	  list of available devices, when it should have been
	  using the default signal handler.
	- The cupsEncodeOptions() function could encode an
	  option with a NULL last string.
	- The socket backend could report the wrong number of
	  backchannel bytes if an error occurred on the link.
	- The cups-polld program now only sleeps after getting
	  all printers and classes.  This allows for longer
	  intervals without excessive delays before classes show
	  up...
	- Added a new httpWait() function to support waiting for
	  data for a specific number of milliseconds.
	- httpGets() now times out after 1 second on
	  non-blocking HTTP connections.