@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.46 2003/03/05 21:12:15 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.47 2003/03/10 21:05:28 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -3442,6 +3442,10 @@ get_printer_attrs(client_t        *con,	/* I - Client connection */
              ippFindAttribute(con->request, "requested-attributes",
 	                      IPP_TAG_KEYWORD), IPP_TAG_ZERO, 0);
 
+  copy_attrs(con->response, CommonData,
+             ippFindAttribute(con->request, "requested-attributes",
+	                      IPP_TAG_KEYWORD), IPP_TAG_ZERO, IPP_TAG_COPY);
+
   con->response->request.status.status_code = IPP_OK;
 }
 
@@ -3585,6 +3589,9 @@ get_printers(client_t *con,		/* I - Client connection */
       add_queued_job_count(con, printer);
 
       copy_attrs(con->response, printer->attrs, requested, IPP_TAG_ZERO, 0);
+
+      copy_attrs(con->response, CommonData, requested, IPP_TAG_ZERO,
+                 IPP_TAG_COPY);
     }
 
   con->response->request.status.status_code = IPP_OK;
@@ -6150,5 +6157,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.46 2003/03/05 21:12:15 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.47 2003/03/10 21:05:28 mike Exp $".
  */
